<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.add_plant.AddPlantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_CommonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/common_name"
            android:textColorHint="@color/black"
            />

        <EditText
            android:id="@+id/et_Specie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/specie"
            android:textColorHint="@color/black"
            />

        <EditText
            android:id="@+id/et_Level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/level"
            android:textColorHint="@color/black"
            />

        <EditText
            android:id="@+id/et_Temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/temperature"
            android:textColorHint="@color/black"
            />

        <EditText
            android:id="@+id/et_SunLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/sunLevel"
            android:textColorHint="@color/black"
            />

        <EditText
            android:id="@+id/et_Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/location"
            android:textColorHint="@color/black"
            />

        <EditText
            android:id="@+id/et_Irrigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/irrigation"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/et_Fertilize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/fertilize"
            android:textColorHint="@color/black"
            />

        <EditText
            android:id="@+id/et_Image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/image"
            android:textColorHint="@color/black"
            />

        <Button
            android:id="@+id/btn_addPlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>