<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChangeLanguageFragment"
    android:background="@color/background_app">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textSize="30sp"
            android:textColor="@color/background_component"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginVertical="30dp"/>

        <RadioGroup
            android:id="@+id/group_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_language"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/radio_spanish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spanish"
                android:textSize="24sp"
                android:textColor="@color/background_component"/>

            <RadioButton
                android:id="@+id/radio_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textSize="24sp"
                android:textColor="@color/background_component"/>

            <RadioButton
                android:id="@+id/radio_french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/french"
                android:textSize="24sp"
                android:textColor="@color/background_component"/>

        </RadioGroup>

        <Button
            android:id="@+id/btn_change_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_radio"
            android:text="@string/ok"
            android:layout_marginTop="16dp"
            android:textColor="@color/background_component"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>